[project]
name = "claude-context"
version = "0.1.0"
description = "Manage project-wide and branch-specific context documents for Claude sessions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ctx = "claude_context.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_context"]
